syntax = "proto3";

package trace2e_api;

service P2M {
    rpc CtEvent(Ct) returns (Ack);
    rpc IoEvent(Io) returns (Grant);
    rpc DoneIoEvent(Io) returns (Ack);
}

message Ct {
    uint32 process_id = 1;
    uint32 user_id = 2;
    int32 file_descriptor = 3;
    string container = 4;
    string resource_identifier = 5;
    bool input = 6;
    bool output = 7;
    bool remote = 8;
}

message Io {
    uint32 process_id = 1;
    int32 file_descriptor = 2;
    string container = 3;
    string method = 4;
}

message Grant {
    int32 file_descriptor = 1;
}

message Ack {
}